--- a/codigo-fonte/assets/css/style.css
+++ b/codigo-fonte/assets/css/style.css
@@ -120,3 +120,9 @@ h1 {
     width: 100px;
     margin-top: 100px;
 }
+
+.erro{
+    display: flex;
+    background-color: #1B2E35;
+    color: #ffffff;
+}   
