--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,3 +125,19 @@ h1 {
     display: flex;
     color: #da2a2a;
 }
+
+#form-cadastro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #1B2E35;
+    width: 50%;
+    padding: 40px;
+}
+
+#tela-de-cadastro {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
