--- a/assets/css/cadastros.css
+++ b/assets/css/cadastros.css
@@ -9,85 +9,133 @@ body {
     background-color: #1B2E35;
 }
 
-#tela-cadastro {
+#tela-cadastro{
     display: flex;
     width: 100%;
     height: 100vh;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
 }
 
-#imagem-lateral {
-    width: 50%;
+#caixa-cadastro{
     display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#imagem-lateral{
+    display: flex;
+    width: 50%;
     align-items: center;
     justify-content: center;
 }
 
-#imagem-cadastro {
+#imagem-cadastro{
     width: 80%;
-    max-width: 500px;
+    height: 80%;
 }
 
-#caixa-cadastro {
-    width: 40%;
-    height: 60%;
-    background-color: #264a50;
-    padding: 30px;
-    border-radius: 15px;
+#cancelar{
+    background-color: #FEFEFE;
+    padding: 10px 25px;
+    border-radius: 5px;
+    font-size: 13px;
+    color: #051E27;
+    font-weight: bolder;
+    text-decoration: none;
+    transition: 0.2s;
+}
+
+#salvar{
+    background-color: #FEFEFE;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-size: 13px;
+    color: #051E27;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+#salvar:hover {
+    background-color: #143D4A;
+    color: #FEFEFE;
+}
+
+#cancelar:hover {
+    background-color: #143D4A;
+    color: #FEFEFE;
+}
+
+#formulario{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    background-color: #385A64;
+    padding: 80px 30px 40px;
+    border-radius: 20px;
+    width: 550px;
+    box-shadow: #051E27 10px;
 }
 
-#titulo {
-    font-size: 24px;
-    color: #fff;
-    margin-bottom: 20px;
+#titulo{
+    color: #FEFEFE;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
-#formulario {
-    width: 100%;
-}
-
-.rotulo {
-    display: block;
-    margin-bottom: 8px;
-    color: #fff;
-    font-weight: bold;
-}
-
-.caixadeentrada {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: none; 
-    margin-bottom: 20px;
-    background-color: #fff;
-}
-
-.botoes {
-    background-color: #fff;
-    color: #000;
-    padding: 10px 20px;
-    border: none;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    font-weight: bolder;
-}
-
-.botoes:hover {
-    background-color: #ccc;
-}
-
-#formulario button {
-    display: inline-block;
-}
-
-#div-botoes{
+#botoes{
     display: flex;
-    margin: 140px 0 0 250px;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 30px;
+}
+
+.caixadeentrada{
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    width: 100%;
+    outline: none;
+    background-color: #fff;
+    color: #333;
+    font-size: 12px;
+}
+
+.div-linhas {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.grupo-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.linha1 {
+    flex: 3;
+}
+
+.linha2 {
+    flex: 2;
+}
+
+.linha3 {
+    flex: 1;
+    width: 100%;
+}
+
+.rotulo{
+    color: #FEFEFE;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 2px;
+}
+
+.erro{
+    color: rgb(163, 10, 10);
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 5px;
 }
