--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #menu-links {
     display: flex;
