--- a/assets/css/tabelas.css
+++ b/assets/css/tabelas.css
@@ -16,7 +16,7 @@ body {
   font-size: 50px;
   margin-top: 40px;
   margin-bottom: 25px;
-  color: #D0D0D0;
+  color: #ffffff;
 }
 
 #div-tabela {
@@ -27,7 +27,8 @@ body {
 
 #tabela {
   width: 90%;
-  max-width: 1200px;
+  max-width: 2000px;
+  margin-top: 30px;
   border-collapse: collapse;
   overflow: hidden;
 }
@@ -42,7 +43,6 @@ body {
   padding: 12px 16px;
   font-size: 14px;
   text-align: center;
-  color: #ffffff;
 }
 
 #tabela th:last-child, #tabela td:last-child {
@@ -57,6 +57,7 @@ body {
 
 #tabela tbody tr:nth-child(odd) {
     background-color: #2E3A3D;
+    color: #D0D0D0;
 }
 
 #tabela tbody tr:hover {
@@ -74,4 +75,25 @@ body {
   width: 16px;
   height: 16px;
   cursor: pointer;
+}
+
+#cancelar-cadastrar{
+    background-color: #FEFEFE;
+    padding: 10px 25px;
+    border-radius: 5px;
+    font-size: 13px;
+    color: #051E27;
+    font-weight: bolder;
+    text-decoration: none;
+    transition: 0.2s;
+    margin-left: 97px;
+}
+
+#cancelar-cadastrar:hover {
+    background-color: #143D4A;
+    color: #FEFEFE;
+}
+
+#cabecalho-categoria{
+    
 }
