--- a/assets/css/tela-inicial.css
+++ b/assets/css/tela-inicial.css
@@ -16,6 +16,7 @@ body {
 }
 
 .total-cadastros{
+    display: flex;
     background-color: #006666;
     width: 300px;
     margin: 0 50px 50px 0;
@@ -25,6 +26,10 @@ body {
 }
 
 .total {
+    display: flex;
+}
+
+.nomes-resumo{
     display: block;
 }
 
