--- a/assets/css/tabelas.css
+++ b/assets/css/tabelas.css
@@ -42,10 +42,10 @@ body {
 #tabela th, #tabela td {
   padding: 12px 20px;
   font-size: 14px;
+  text-align: center;
 }
 
 #tabela th:last-child, #tabela td:last-child {
-  text-align: right;
   padding-right: 20px;
 }
 
