--- a/assets/css/cadastros.css
+++ b/assets/css/cadastros.css
@@ -135,7 +135,10 @@ body {
 }
 
 .erro{
-    color: rgb(163, 10, 10);
+    background-color: #ffb0b0;
+    padding: 5px;
+    border-radius: 4px;
+    color: #ff0000;
     text-align: center;
     font-size: 15px;
     margin-bottom: 5px;
