--- a/assets/css/tela-inicial.css
+++ b/assets/css/tela-inicial.css
@@ -75,3 +75,22 @@ body {
     font-size: 40px;
     margin-top: 10px;
 }
+
+#botao-sair{
+    background-color: #FEFEFE;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-size: 13px;
+    color: #051E27;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: 0.2s;
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+
+#botao-sair:hover {
+    background-color: #143D4A;
+    color: #FEFEFE;
+}
